--- a/requirements.txt
+++ b/requirements.txt
@@ -128,3 +128,4 @@ zstandard>=0.23.0
 # Model Context Protocol support (optional)
 mcp>=1.0.0
 langchain-mcp-adapters>=0.1.0  # LangChain MCP adapters for tool integration
+langchain-google-genai>2.1.10
